# maxplus

./: .gitignore  .prettierignore  LICENSE  README.md  package.json  requests.md  svelte.config.js  vite.config.js
.github/workflows/: android-build.yml  ios-build.yml  linux-build.yml  windows-build.yml
src/: app.html
src-tauri/: .gitignore  .taurignore  Cargo.toml  Info.ios.plist  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/src/: commands.rs  files.rs  lib.rs  main.rs  max_client.rs  migrate.rs  secure.rs  state.rs  stores.rs  video.rs
src-tauri/web_api/: Cargo.toml
src-tauri/web_api/examples/: login.rs  token.rs
src-tauri/web_api/src/: constants.rs  errors.rs  lib.rs  navigation.rs
src-tauri/web_api/src/api/: auth.rs  messaging.rs  telemetry.rs
src/components/: Bubbles.svelte  ChatWindow.svelte  Panel.svelte  ProfileModal.svelte
src/components/ChatWindow/: Attachments.svelte  DateSeparator.svelte  Dropout.svelte  E2eModal.svelte  Input.svelte  MediaViewer.svelte  Message.svelte  PinnedMessage.svelte  Reactions.svelte  Settings.svelte  VideoPreview.svelte  actions.js  e2e.js
src/components/ChatWindow/input/: Input.svelte  Reply.svelte
src/components/chats/: AddContactModal.svelte  ChatItem.svelte  FolderEditChatItem.svelte  FolderEditModal.svelte  FolderTabs.svelte  SearchResultItem.svelte
src/components/main/: AddContactBtn.svelte  Avatar.svelte  Card.svelte  ChatSelector.svelte  ConfirmModal.svelte  FloatingDebugToggle.svelte  InputModal.svelte  MessagePreview.svelte  Search.svelte  Signature.svelte  Timestamp.svelte  attachs.js
src/components/main/dev/: OpenButton.svelte  Settings.svelte
src/components/main/devices/: OpenButton.svelte  Settings.svelte
src/lib/api/: BaseApi.js  MobileApi.js  MockApi.js  WebApi.js
src/lib/api/web/: previous.js
src/lib/components/: ChatWindow.svelte  Panel.svelte
src/lib/components/ChatWindow/: Message.svelte
src/lib/components/chats/: AddContactModal.svelte  ChatItem.svelte  FolderTabs.svelte
src/lib/components/main/: AddContactBtn.svelte  Card.svelte  Search.svelte
src/lib/crypto/: asymmetric.js  async_encryption.js  messages.js  sodium.js  symmetric.js  text-codec.js
src/lib/max/: autorequests.js  clientSync.js  globalSearch.js  raw.js
src/lib/stores/: api.js  logs.js  session.js  settings.js
src/lib/styles/: AnimatedPanel.css
src/lib/utils/: Signature.svelte  Timestamp.svelte  attachs.js  caching.js  debounce.js  invoke.js  scroll.js  text.js  time.js  updater.js
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/auth/login/: +page.svelte
src/routes/auth/password/: +page.svelte
src/routes/auth/register/: +page.svelte
src/routes/auth/select/: +page.svelte
src/routes/auth/verify/: +page.svelte
src/routes/calls/: +page.svelte
src/routes/chats/: +page.svelte
src/routes/contacts/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/settings/about/: +page.svelte
src/routes/settings/e2e/dictionary/: +page.svelte
src/routes/settings/logs/: +page.svelte
src/routes/settings/profile/: +page.svelte
src/routes/settings/sessions/: +page.svelte
src/routes/setup/tokens/: +page.svelte
