[package]
name = "maxplus"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "maxplus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rumax = { path = "../../rumax" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-stronghold = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-android-fs = "13.1.0"
tokio = { version = "1", features = ["full"] }
#native-tls = "0.2"
regex = "1.11.3"
url = "2.5.7"
uuid = { version = "1.18.1", features = ["v4"] }
futures-util = "0.3.31"
tauri-plugin-os = "2"
reqwest = { version = "0.12.23", features = [ "json" ] }

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-barcode-scanner = "2"
tauri-plugin-biometric = "2"
